--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">StreamWideTechTest</string>
+    <string name="search_placeholder">Search</string>
 </resources>
