--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="search_placeholder">Search</string>
     <string name="grant_permission_title">Grant permission</string>
     <string name="permission_body">Read contact permission is required for this app!</string>
+    <string name="settings_text">In order to use this app, you should grant contacts permission. Open settings to do so.</string>
 </resources>
